--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-redux-toastr": "^7.4.7",
     "react-router": "^3",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
+    "redux-multi": "^0.1.12",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "uikit": "^3.0.2"
   },
